[metadata]
# replace with your username:
name = graphgrove 
version = 0.0.1
author = Nicholas Monath
author_email = nmonath@cs.umass.edu
description = graph clustering
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nmonath/graphgrove
project_urls =
    Bug Tracker = https://github.com/nmonath/graphgrove/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = graphgrove
packages = find:
python_requires = >=3.6

[options.packages.find]
where = graphgrove
